--- a/fish_speech/configs/text2semantic_finetune_luxembourgish.yaml
+++ b/fish_speech/configs/text2semantic_finetune_luxembourgish.yaml
@@ -82,3 +82,15 @@ callbacks:
   model_checkpoint:
     every_n_train_steps: 1000  # Save every 1000 steps
     save_top_k: 6  # Keep more initially, will clean up to 4 (2000, 4000, + 2 best) after training
+  sample_generation:
+    _target_: fish_speech.callbacks.sample_preview.SampleGenerationCallback
+    sample_text: "Moien, ech sinn OpenAudio. Ech léieren elo fléissend Lëtzebuergesch ze schwätzen."
+    output_dir: ${paths.run_dir}/samples
+    decoder_config_name: modded_dac_vq
+    decoder_checkpoint_path: checkpoints/openaudio-s1-mini/codec.pth
+    every_n_steps: 1000
+    temperature: 0.7
+    top_p: 0.7
+    repetition_penalty: 1.35
+    max_new_tokens: 512
+    chunk_length: 300
